--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "react": "^19.0.0",
+    "react-animate-height": "^3.2.3",
     "react-dom": "^19.0.0",
-    "react-modal": "^3.16.3",
-    "react-slidedown": "^2.4.7"
+    "react-modal": "^3.16.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
